Fixed #3921 - [IE] Container scroll issue on IE7.
git-svn-id: https://svn.ckeditor.com/CKEditor/trunk@3912 da63caf2-3823-0410-a1e8-d69ccee00dfb

--- a/_source/skins/kama/mainui.css
+++ b/_source/skins/kama/mainui.css
@@ -126,3 +126,9 @@ span.cke_skin_kama
 {
 	position: absolute;
 }
+
+.cke_skin_kama .cke_browser_ie.cke_browser_quirks .cke_contents iframe
+{
+	position: absolute;
+	top: 0;
+}
